# py-init-cleaner

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  ci.yaml
scripts/: bootstrap.sh  cargo-out-dir  download.sh
src/: main.rs
test/: __init__.py
tests/: __init__.py
tests/sub-module/: __init__.py
