[package]
name = "py-init-cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Thomas Chaigneau <t.chaigneau.tc@gmail.com>"]
description = "Pre-commit hook to clean python __init__.py files automatically."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
walkdir = "2.5.0"
